# cyrcles

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  roadmap.md  thoughts.md
agent/: Cargo.toml
cli/: Cargo.toml
common/: Cargo.toml
daemon/: Cargo.toml
gui/: Cargo.toml  build.rs  build_slint.rs.old
gui/src/: gpg.rs  main.rs
gui/src/gui/gtk/: main.rs  mod.rs
gui/src/gui/wingui/: main.rs  mod.rs
misc/: data_structures.md  to_learn.md
