[package]
name = "cyrcle-common"
version = "0.1.0"
edition = "2021"
authors = ["Sam"]
description = """"""
readme = "../Readme.md"
keywords = ["deamon", "auth"]
license = "GPL-3"
publish = false


[dependencies]
sequoia-openpgp = { version = "*", default-features = false }


# [features]
# default = ["seqouia-openpgp/default"]
# crypto-cng = ["sequoia-openpgp/crypto-cng"]
# crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
# compression = ["sequoia-openpgp/compression"]
# compression-deflate = ["sequoia-openpgp/compression-deflate"]
# compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]


# [features]
# default = ["sequoia-openpgp/default"]
# crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
# crypto-cng = ["sequoia-openpgp/crypto-cng"]
# compression = ["sequoia-openpgp/compression"]
# compression-deflate = ["sequoia-openpgp/compression-deflate"]
# compression-bzip2 = ["sequoia-openpgp/compression-bzip2"]

